@@ -1,15 +1,20 @@
 package com.maria.crudapp_participants.controller;
 
+import com.maria.crudapp_participants.dto.PaginatedParticipantDTO;
 import com.maria.crudapp_participants.entity.Participant;
 import com.maria.crudapp_participants.service.ParticipantService;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.ui.ExtendedModelMap;
 import org.springframework.ui.Model;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
 import static org.mockito.Mockito.mock;
@@ -25,28 +30,42 @@ class ParticipantControllerTest {
 
     @Test
     public void fetchParticipantsWhenQueryIsNull() {
-        when(participantService.fetchParticipantList(1,5))
-                .thenReturn(List.of(Participant.builder().id(UUID.fromString("9d9239ac-1257-11ed-861d-0242ac120002")).build()));
+        Participant participant1 = new Participant(UUID.fromString("9d9239ac-1257-11ed-861d-0242ac120002"), "Sferiff", "football", "Moldova", 342);
+        Participant participant2 = new Participant(UUID.fromString("9d9239ac-1257-11ed-861d-0242ac120002"), "Sferiff", "football", "Moldova", 342);
+        List<Participant> participantList = Arrays.asList(participant1, participant2);
+        Page<Participant> participantPage = new PageImpl<>(participantList);
+        when(participantService.fetchParticipantList(1, 5))
+                .thenReturn((PaginatedParticipantDTO.builder()
+                                .participants(participantPage.toList())
+                                .availablePages(participantPage.getTotalPages())
+                                .build()));
 
         Model model = new ExtendedModelMap();
-        String res = controller.fetchParticipantList(null,1, model);
+        String res = controller.fetchParticipantList(null, 1, model);
         Object expectedAllParticipants = model.getAttribute("allParticipants");
-        List<Participant> participantList = (List<Participant>) expectedAllParticipants;
+        List<Participant> expectedAllParticipantsList = (List<Participant>) expectedAllParticipants;
 
-        Assertions.assertNotNull(participantList);
-        Assertions.assertEquals(1, participantList.size());
+        Assertions.assertNotNull(expectedAllParticipantsList);
+        Assertions.assertEquals(5, expectedAllParticipantsList.size());
         Assertions.assertEquals(UUID.fromString("9d9239ac-1257-11ed-861d-0242ac120002"), participantList.get(0).getId());
         Assertions.assertEquals("main_page", res);
     }
 
     @Test
     public void fetchParticipantsWhenQueryNotNull() {
-        when(participantService.searchFlexible("Sheriff",1,5))
-                .thenReturn(List.of(Participant.builder().name("Sheriff").build()));
+        Participant participant1 = new Participant(UUID.fromString("9d9239ac-1257-11ed-861d-0242ac120002"), "Sferiff", "football", "Moldova", 342);
+        Participant participant2 = new Participant(UUID.fromString("9d9239ac-1257-11ed-861d-0242ac120002"), "Sferiff", "football", "Moldova", 342);
+        List<Participant> participantList = Arrays.asList(participant1, participant2);
+        Page<Participant> participantPage = new PageImpl<>(participantList);
+        when(participantService.searchFlexible("Sheriff", 1, 5))
+                .thenReturn(Optional.of(PaginatedParticipantDTO.builder()
+                        .participants(participantPage.toList())
+                        .availablePages(participantPage.getTotalPages())
+                        .build()));
 
         Model model = new ExtendedModelMap();
-        String res1 = controller.fetchParticipantList("Sheriff", 1,model);
-        String res2 = controller.fetchParticipantList("rr",1, model);
+        String res1 = controller.fetchParticipantList("Sheriff", 1, model);
+        String res2 = controller.fetchParticipantList("rr", 1, model);
         Object expectedAllParticipants = model.getAttribute("allParticipants");
         Object expectedQuery = model.getAttribute("query");
 
